--- a/AOC/2022/rust/day-08/Cargo.toml
+++ b/AOC/2022/rust/day-08/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.75"
-itertools = "0.11.0"
+cargo = "0.73.1"
 
 [dev-dependencies]
 lazy_static = "1.4.0"
