solution day 1 part 2 but can't get perf record to work...

--- a/AOC/2024/rust/Cargo.toml
+++ b/AOC/2024/rust/Cargo.toml
@@ -8,5 +8,13 @@ edition = "2021"
 # path = "src/lib.rs"
 
 [profile.release]
-debug = true        # keep DWARF info
+incremental = true
+debug = true
+lto = "fat"
 split-debuginfo = 'unpacked'  # optional, keeps symbols readable
+
+# [build]
+# rustflags = [
+#     "-C", "force-frame-pointers=yes",
+#     "-C", "symbol-mangling-version=v0"
+# ]
