cleanup comments and learned.md

--- a/2024/rust/Cargo.toml
+++ b/2024/rust/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [profile.release]
 incremental = true
-debug = 1
+debug = true
 strip = false
 lto = "fat"
 split-debuginfo = "unpacked"
